Added Last Week Tonight and Changed Klepper Link
Last Week Tonight - the Bill Nye Episode for Crow and changed the Klepper link to the show's splash page

--- a/filmography.html
+++ b/filmography.html
@@ -147,7 +147,13 @@
       <div class="center-text" id="Television">
         <h2 style="color:#fee2a1">Television</h2>
         <ul>
-          <li><a href="https://www.imdb.com/title/tt9454910/?ref_=nm_flmg_wr_1"><h3><i>Klepper (Comedy Central)</i></h3></a>
+          <li><a href="https://www.hbo.com/last-week-tonight-with-john-oliver"><h3><i>Last Week Tonight with John Oliver - Season 6 (HBO))</i></h3></a>
+            <ul>
+              <li>Erik: Production Sound Mixer (1 episode)</li>
+              <li>Crow: N/A</li>
+            </ul>
+          </li>
+          <li><a href="http://www.cc.com/shows/klepper"><h3><i>Klepper (Comedy Central)</i></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer (1 episode)</li>
               <li>Crow: N/A</li>
