Footer header stretched back to edges
Created new css class "center-large" to handle footer stretch to edge of canvas

--- a/filmography.html
+++ b/filmography.html
@@ -365,7 +365,7 @@
       <br>
 
       <div class="imgbox2">
-        <img class="center-fit" src='TwinSoundHeader.png'></img>
+        <img class="center-large" src='TwinSoundHeader.png'></img>
       </div>
 
   </body>
