header fonts for body text in index
big letters yo

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 
       <div class="center-nav">
         <div class="center-text">
-          Hello! Welcome to the Homepage of Twin Sound!<br>
-          Twin Sound is a pair of production sound engineers for film and television who also happen to be twins. <br>
-          Twin Sound is composed of Crow and Erik Duemig. <br>
-          Crow (the one in the cute overalls) is a Boom Operator. <br>
-          Erik (the one with the rad helix hair) is a Production Sound Mixer. <br>
-          Both are members of the <a href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood. <br>
+          <h1>Hello! Welcome to the Homepage of Twin Sound!</h1><br>
+          <h2>Twin Sound is a pair of production sound engineers for film and television who also happen to be twins.</h2> <br>
+          <h2 style="color:#fee2a1">Twin Sound is composed of Crow and Erik Duemig. </h2><br>
+          <h3>Crow (the one in the cute overalls) is a Boom Operator. </h3><br>
+          <h3>Erik (the one with the rad helix hair) is a Production Sound Mixer. </h3><br>
+          <h4>Both are members of the <a href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood. </h4><br>
           <br>
           <br>
-          This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a href="filmography.html">Narrative Filmography</a>.
+          <h2 style="color:#b7c2c4">This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a href="filmography.html">Narrative Filmography</a>.</h2>
           <br>
           <br>
-          If you’d rather hang out for a bit, cool! <br>
-          Click some links and see where they take you! <br>
-          Here are some more pathways you might be interested in: <br>
+          <h3>If you’d rather hang out for a bit, cool! </h3><br>
+          <h3>Click some links and see where they take you!</h3><br>
+          <h3>Here are some more pathways you might be interested in: </h3><br>
           <br>
-          How did y’all get your start in the film industry? <br>
+          <h3>How did y’all get your start in the film industry? </h3><br>
           <br>
-          Where are y’all located? And where can you work? <br>
+          <h3>Where are y’all located? And where can you work? </h3><br>
         </div>
       </div>
 
