--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h3 style="color:#e9684c">Twin Sound is composed of Crow and Erik Duemig. </h3>
           <h3 style="color:#b7c2c4">Crow (the one in the cute overalls) is a Boom Operator. </h3>
           <h3 style="color:#fee2a1">Erik (the one with the rad helix hair) is a Production Sound Mixer. </h3>
-          <h3 style="color:#000000">Both are members of the <a href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood. </h3>
+          <h3 style="color:#5fbdd8">Both are members of the <a href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood. </h3>
           <br>
           <h3 style="color:#b7c2c4">This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a href="filmography.html">Narrative Filmography</a>.</h3>
           <br>
