--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="center-nav">
         <div class="center-text">
           <h3 style="color:#863534">Hello! Welcome to the Homepage of Twin Sound!</h3>
-          <h3 style="color:#8b7e9c">Twin Sound is a pair of production sound engineers for film and television who also happen to be twins.</h3>
-          <h3 style="color:#e9684c">Twin Sound is composed of Crow and Erik Duemig. </h3>
-          <h3 style="color:#b7c2c4">Crow (the one in the cute overalls) is a Boom Operator. </h3>
-          <h3 style="color:#fee2a1">Erik (the one with the rad helix hair) is a Production Sound Mixer. </h3>
-          <h3 style="color:#5fbdd8">Both are members of the <a style="font-size: 32px;" href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a style="font-size: 32px;" href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood. </h3>
+          <h3 style="color:#8b7e9c">Twin Sound is a pair of production sound engineers for film and television who also happen to be twins</h3>
+          <h3 style="color:#e9684c">Twin Sound is composed of Crow and Erik Duemig </h3>
+          <h3 style="color:#b7c2c4"><a style="font-size: 32px;" href="https://www.imdb.com/name/nm5333049/">Crow</a> (the one in the cute overalls) is a <a style="font-size: 32px;" href"BoomOperator.html">Boom Operator</a></h3>
+          <h3 style="color:#fee2a1"><a style="font-size: 32px;" href="https://www.imdb.com/name/nm5013585/">Erik</a> (the one with the rad helix hair) is a <a style="font-size: 32px;" href"ProductionSoundMixer.html">Production Sound Mixer</a></h3>
+          <h3 style="color:#5fbdd8">Both are members of the <a style="font-size: 32px;" href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a style="font-size: 32px;" href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood </h3>
           <br>
-          <h3 style="color:#343b40">This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a style="font-size: 32px;" href="filmography.html">Narrative Filmography</a>.</h3>
+          <h3 style="color:#343b40">This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a style="font-size: 32px;" href="filmography.html">Narrative Filmography</a></h3>
           <br>
           <h3 style="color:#343b40">If you’d rather hang out for a bit, cool! </h3>
           <h3 style="color:#343b40">Click some links and see where they take you!</h3>
