Fixing hangout paragraph
spacing

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <br>
           <h3 style="color:#343b40">This website has a lot of twists and turns, so if you’re looking to hire us to run sound on your movie or TV show and just want to get right to the good good creds, you can click this link to view our <a style="font-size: 32px;" href="filmography.html">Narrative Filmography</a></h3>
           <br>
-          <h3 style="color:#343b40">If you’d rather hang out for a bit, cool! </h3>
-          <h3 style="color:#343b40">Click some links and see where they take you!</h3>
-          <h3 style="color:#343b40">Here are some more pathways you might be interested in: </h3>
+          <h3 style="color:#343b40">
+            If you’d rather hang out for a bit, cool!<br>
+            Click some links and see where they take you!<br>
+            Here are some more pathways you might be interested in:
+          </h3>
           <br>
           <h3 style="color:#343b40">How did y’all get your start in the film industry? </h3>
           <br>
