twins wikipedia link
lolololol

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="center-nav">
         <div class="center-text">
           <h3 style="color:#863534">Hello! Welcome to the Homepage of Twin Sound!</h3>
-          <h3 style="color:#8b7e9c">Twin Sound is a pair of production sound engineers for film and television who also happen to be twins</h3>
+          <h3 style="color:#8b7e9c">Twin Sound is a pair of production sound engineers for film and television who also happen to be <a style="font-size: 32px;" href="https://en.wikipedia.org/wiki/Twin">twins</a></h3>
           <h3 style="color:#e9684c">Twin Sound is composed of <a style="font-size: 32px;" href="https://www.imdb.com/name/nm5333049/">Crow</a> and <a style="font-size: 32px;" href="https://www.imdb.com/name/nm5013585/">Erik</a> Duemig </h3>
           <h3 style="color:#b7c2c4">Crow (the one in the cute overalls) is a <a style="font-size: 32px;" href="BoomOperator.html">Boom Operator</a></h3>
           <h3 style="color:#fee2a1">Erik (the one with the rad helix hair) is a <a style="font-size: 32px;" href="ProductionSoundMixer.html">Production Sound Mixer</a></h3>
