--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <h3 style="color:#5fbdd8">Both are members of the <a style="font-size: 32px;" href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a style="font-size: 32px;" href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood </h3>
           <br>
           <h3 style="color:#343b40">
-            If you’d rather hang out for a bit, cool!<br>
-            Click some links and see where they take you!<br>
+            Thanks for hanging out on your website!<br>
+            Feel free to surf around<br>
             Here are some more pathways you might be interested in:
           </h3>
           <br>
-          <h3 style="color:#343b40">How did y’all get your start in the film industry? </h3>
+          <h3 style="color:#343b40"><a style="font-size: 32px;" href=“OriginStory.html“>How did y’all get your start in the film industry?</a></h3>
           <br>
-          <h3 style="color:#343b40">Where are y’all located? And where can you work? </h3>
+          <h3 style="color:#343b40"><a style="font-size: 32px;" href=“location.html“>Where are y’all located? And where can you work?</a></h3>
         </div>
       </div>
 
