--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <br>
       <br>
 
-      <div class="imgbox2">
+      <div class="imgbox">
         <img class="center-large" src='TwinSoundHeader.png'></img>
       </div>
 
