--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
   </head>
 
   <body>
+    <style>
+        * {
+          margin: 0;
+          padding: 0;
+        }
+        .imgbox {
+          display: grid;
+          height: 60%;
+        }
+        .imgbox2 {
+          display: grid;
+          height: 60%;
+        }
+        .center-fit {
+          max-width: 70%;
+          max-height: 60vh;
+          margin: auto;
+        }
+      </style>
+
       <div class="imgbox">
         <img class="center-fit" src="CircleLogo.png"></img>
       </div>
