--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br>
       <br>
 
-      <div class="imgbox">
+      <div class="imgbox2">
         <img class="center-large" src='TwinSoundHeader.png'></img>
       </div>
 
