--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h3 style="color:#e9684c">Twin Sound is composed of <a style="font-size: 32px;" href="https://www.imdb.com/name/nm5333049/">Crow</a> and <a style="font-size: 32px;" href="https://www.imdb.com/name/nm5013585/">Erik</a> Duemig </h3>
           <h3 style="color:#b7c2c4">Crow (the one in the cute overalls) is a <a style="font-size: 32px;" href="BoomOperator.html">Boom Operator</a></h3>
           <h3 style="color:#fee2a1">Erik (the one with the rad helix hair) is a <a style="font-size: 32px;" href="ProductionSoundMixer.html">Production Sound Mixer</a></h3>
-          <h3 style="color:#5fbdd8">Both are members of the <a style="font-size: 32px;" href=“http://local695.com/“>IATSE Union</a> and both are listed on the <a style="font-size: 32px;" href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood </h3>
+          <h3 style="color:#5fbdd8">Both are members of the <a style="font-size: 32px;" href="http://local695.com/">IATSE Union</a> and both are listed on the <a style="font-size: 32px;" href=“https://www.csatf.org/rosters-lists/industry-experience-roster/“>Industry Experienced Roster</a> put out by Contract Services in Hollywood </h3>
           <br>
           <h3 style="color:#343b40">
             Thanks for hanging out on your website!<br>
