filmography last week tonight fix
sry crow my b

--- a/filmography.html
+++ b/filmography.html
@@ -149,8 +149,8 @@
         <ul>
           <li><a href="https://www.hbo.com/last-week-tonight-with-john-oliver"><h3><i>Last Week Tonight with John Oliver - Season 6 (HBO))</i></h3></a>
             <ul>
-              <li>Erik: Production Sound Mixer (1 episode)</li>
-              <li>Crow: N/A</li>
+              <li>Erik: N/A</li>
+              <li>Crow: Boom Operator (1 episode)</li>
             </ul>
           </li>
           <li><a href="http://www.cc.com/shows/klepper"><h3><i>Klepper (Comedy Central)</i></h3></a>
