remove slash in css rel link
fixes bug in local fork

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <head>
     <meta charset="utf-8">
     <title>Twin Sound</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png"/>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -37,7 +37,7 @@
             Here are some more pathways you might be interested in:
           </h3>
           <h3 style="color:#343b40"><a style="font-size: 32px;" href="location.html">Where are y’all located? And where can you work?</a></h3>
-          <h3 style="color:#343b40"><a style="font-size: 32px;" href="OriginStory.html">How did y’all get your start in the film industry?</a></h3>
+          <h3 style="color:#343b40"><a style="font-size: 32px;" href="OriginStory.html">Did I hear y'all came up in the Austin, Texas film industry?</a></h3>
           <br>
 
         </div>
