--- a/BoomOperator.html
+++ b/BoomOperator.html
@@ -8,8 +8,8 @@
   <head>
     <meta charset="utf-8">
     <title>Twin Sound - Boom Operator</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png"/>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
