--- a/filmography.html
+++ b/filmography.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <title>Twin Sound - Filmography</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="/SmallCircle.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
