--- a/BoomOperator.html
+++ b/BoomOperator.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <title>Twin Sound - Boom Operator</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png">
+    <link rel="shortcut icon" type="image/png" href="SmallCircle.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -21,7 +21,11 @@
 
       <div class="center-nav">
         <div class="center-text">
-          <h1>Boom Operator</h1>
+          <h1>Crow - Boom Operator</h1>
+          <h2>The person who holds the fluffy microphone on a stick</h2>
+          <h3 style="color:#b7c2c4">
+            As the boom operator, Crow is the on-set liason for the production sound team. They are in charge of keeping on-set personnel aware of the Sound Department's needs, as well as watching each set-up to spot out potential issues before they arise. A good boom operator should maintain a good rapport with the Camera and G&E departments and be able to speak the languages of their crafts.
+          </h3>
         </div>
       </div>
 
