--- a/ProductionSoundMixer.html
+++ b/ProductionSoundMixer.html
@@ -21,7 +21,11 @@
 
       <div class="center-nav">
         <div class="center-text">
-          <h1>Production Sound Mixer</h1>
+          <h1>Erik - Production Sound Mixer</h1>
+          <h2 style="color:#fee2a1">The person overseeing Mission-Control</h2>
+          <h3 style="color:#343b40">
+            As the Production Sound Mixer, Erik is responsible for overseeing the recording studio on wheels. The most important component of this station is mixing the various microphones in use during a take to create a dialogue track that is as close to a final product as possible. Often, this job involves the use of wireless systems to send the audio signals of the mics in use on set back to the mixing station, so proper knowledge of radio systems management is a must. In addition, the Production Sound Mixer oversees the notes and metadata systems used to give post-production folks all the info they need to efficiently utilitize each track of audio. Proper data handling and power management are also concerns of the Production Sound Mixer. 
+          </h3>
         </div>
       </div>
 
