--- a/location.html
+++ b/location.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <title>Twin Sound - Where Can We Work?</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png"/>
+    <link rel="shortcut icon" type="image/png" href="SmallCircle.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
