--- a/OriginStory.html
+++ b/OriginStory.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <title>Twin Sound - Origin Story</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="/SmallCircle.png"/>
+    <link rel="shortcut icon" type="image/png" href="SmallCircle.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -19,10 +19,8 @@
         <img class="center-fit" src="CircleLogo.png"></img>
       </div>
 
-      <div class="center-nav">
-        <div class="center-text">
+      <div class="center-text">
           <h1>Origin Story</h1>
-        </div>
       </div>
 
       <br>
