--- a/BoomOperator.html
+++ b/BoomOperator.html
@@ -19,15 +19,14 @@
         <img class="center-fit" src="CircleLogo.png"></img>
       </div>
 
-      <div class="center-nav">
-        <div class="center-text">
-          <h1>Crow - Boom Operator</h1>
-          <h2>The person who holds the fluffy microphone on a stick</h2>
-          <h3 style="color:#b7c2c4">
-            As the boom operator, Crow is the on-set liason for the production sound team. They are in charge of keeping on-set personnel aware of the Sound Department's needs, as well as watching each set-up to spot out potential issues before they arise. A good boom operator should maintain a good rapport with the Camera and G&E departments and be able to speak the languages of their crafts.
-          </h3>
-        </div>
+      <div class="center-text">
+        <h1 style="color:#343b40">Crow - Boom Operator</h1>
+        <h2>The person who holds the fluffy microphone on a stick</h2>
+        <h3 style="color:#b7c2c4">
+          As the boom operator, Crow is first and foremost responsible for capturing the dialogue during a take through proper microphone placement. They are the on-set liason for the production sound team, in charge of keeping on-set personnel aware of the Sound Department's needs, as well as watching each set-up to spot out potential issues before they arise. A good boom operator should maintain a good rapport with the Camera and G&E departments and be able to speak the languages of their crafts.
+        </h3>
       </div>
+
 
       <br>
       <br>
