--- a/filmography.html
+++ b/filmography.html
@@ -43,7 +43,7 @@
       </div>
       <div class="center-text" id="FeatureFilms">
         <h2>Feature Films</h2>
-        <ul>
+        <ul style="list-style: none;">
           <li><a href="https://www.imdb.com/title/tt6862538/?ref_=nv_sr_1"><h3><i>Yellow Rose (2019)</i></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer</li>
