Crow didn't boom Butch Queen
whoops

--- a/filmography.html
+++ b/filmography.html
@@ -43,7 +43,7 @@
       </div>
       <div class="center-text" id="FeatureFilms">
         <h2>Feature Films</h2>
-        <ul style="list-style: none;">
+        <ul>
           <li><a href="https://www.imdb.com/title/tt6862538/?ref_=nv_sr_1"><h3><i>Yellow Rose (2019)</i></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer</li>
@@ -287,7 +287,7 @@
           <li><a href="https://www.austinchronicle.com/daily/qmmunity/2018-11-09/alpha-female-films-tackles-queer-life-in-a-podunk-town/"><h3><i>Butch Queen (20??)</i></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer</li>
-              <li>Crow: Boom Operator</li>
+              <li>Crow: N/A</li>
             </ul>
           </li>
           <li><a href="https://vimeo.com/248358866"><h3><i>Moonlighter To Mars (2018)</i></h3></a>
