--- a/filmography.html
+++ b/filmography.html
@@ -360,6 +360,10 @@
       </div>
       </div>
 
+      <div>
+        <a href="https://www.imdb.com/name/nm5013585/">Erik's IMDB Page</a>
+        <a href="https://www.imdb.com/name/nm5333049/">Crow's IMDB Page</a>
+
       <br>
       <br>
       <br>
