--- a/filmography.html
+++ b/filmography.html
@@ -44,6 +44,12 @@
       <div class="center-text" id="FeatureFilms">
         <h2>Feature Films</h2>
         <ul>
+          <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i></h3></a>
+            <ul>
+              <li>Erik: Production Sound Mixer</li>
+              <li>Crow: Boom Operator</li>
+            </ul>
+          </li>
           <li><a href="https://www.imdb.com/title/tt6862538/?ref_=nv_sr_1"><h3><i>Yellow Rose (2019)</i></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer</li>
