--- a/filmography.html
+++ b/filmography.html
@@ -44,7 +44,7 @@
       <div class="center-text" id="FeatureFilms">
         <h2>Feature Films</h2>
         <ul>
-          <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i> <style color=#3696B2>[A24/Plan B Entertainment]</style></h3></a>
+          <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i> <style="color:#3696B2">[A24/Plan B Entertainment]</style></h3></a>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
