--- a/filmography.html
+++ b/filmography.html
@@ -44,7 +44,8 @@
       <div class="center-text" id="FeatureFilms">
         <h2>Feature Films</h2>
         <ul>
-          <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i></a><style="color:#3696B2"> [A24/Plan B Entertainment]</style></h3>
+          <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i></a></h3><br>
+          <h3 style="color:#3696B2"> [A24/Plan B Entertainment]</style></h3>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
