--- a/filmography.html
+++ b/filmography.html
@@ -45,13 +45,14 @@
         <h2>Feature Films</h2>
         <ul>
           <li><a href="https://www.imdb.com/title/tt10633456/?ref_=nv_sr_1?ref_=nv_sr_1"><h3><i>Minari (2020)</i></a></h3><br>
-          <h3 style="color:#3696B2"> [A24/Plan B Entertainment]</style></h3>
+          <h5 style="color:#3696B2"> [A24/Plan B Entertainment]</style></h5>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
             </ul>
           </li>
-          <li><a href="https://www.imdb.com/title/tt6862538/?ref_=nv_sr_1"><h3><i>Yellow Rose (2019)</i></h3></a>
+          <li><a href="https://www.imdb.com/title/tt6862538/?ref_=nv_sr_1"><h3><i>Yellow Rose (2019)</i></h3></a><br>
+          <h5 style="color:#3696B2"> [Sony Pictures Worldwide]</style></h5>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
@@ -63,7 +64,8 @@
               <li>Crow: Boom Operator</li>
             </ul>
           </li>
-          <li><a href="https://www.imdb.com/title/tt6803046/?ref_=nv_sr_1"><h3><i>The Vast of Night (2019)</i></h3></a>
+          <li><a href="https://www.imdb.com/title/tt6803046/?ref_=nv_sr_1"><h3><i>The Vast of Night (2019)</i></h3></a><br>
+          <h5 style="color:#3696B2"> [Amazon Originals]</style></h5>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
@@ -75,13 +77,15 @@
               <li>Crow: Boom Operator</li>
             </ul>
           </li>
-          <li><a href="https://www.imdb.com/title/tt6859352/?ref_=nv_sr_1"><h3><i>Support The Girls (2018)</i></h3></a>
+          <li><a href="https://www.imdb.com/title/tt6859352/?ref_=nv_sr_1"><h3><i>Support The Girls (2018)</i></h3></a><br>
+          <h5 style="color:#3696B2"> [Magnolia Pictures]</style></h5>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
             </ul>
           </li>
-          <li><a href="https://www.imdb.com/title/tt5740806/?ref_=nv_sr_1"><h3><i>Coin Heist (2017)</i></h3></a>
+          <li><a href="https://www.imdb.com/title/tt5740806/?ref_=nv_sr_1"><h3><i>Coin Heist (2017)</i></h3></a><br>
+          <h5 style="color:#3696B2"> [Netflix Originals]</style></h5>
             <ul>
               <li>Erik: Production Sound Mixer</li>
               <li>Crow: Boom Operator</li>
